--- a/lerna.json
+++ b/lerna.json
@@ -1,5 +1,6 @@
 {
-  "$schema": "node_modules/lerna/schemas/lerna-schema.json",
-  "useWorkspaces": true,
-  "version": "0.0.4"
+	"$schema": "node_modules/lerna/schemas/lerna-schema.json",
+	"useWorkspaces": true,
+	"version": "0.0.4",
+	"npmClient": "npm"
 }
