--- a/packages/styles/package.json
+++ b/packages/styles/package.json
@@ -49,5 +49,6 @@
 	},
 	"bugs": {
 		"url": "https://github.com/SagarMahadik/lerna-repo/issues"
-	}
+	},
+	"gitHead": "169749500bd556e1955676287a5124a88ace9a73"
 }
